Fixed missing background color

--- a/app/assets/stylesheets/carpe.scss
+++ b/app/assets/stylesheets/carpe.scss
@@ -652,7 +652,7 @@ form.thin {
   height: 100%;
   display: none;
   opacity: 0.5;
-  background: none !important; // scss-lint:disable ImportantRule
+  background: #000000 !important; // scss-lint:disable ImportantRule
   z-index: 1000;
 }
 
